haskell/Guestfs.hs


get_smp :: GuestfsH -> IO Int
get_smp h = do
  r <- withForeignPtr h (\p -> c_get_smp p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_get_state" c_get_state
  :: GuestfsP -> IO CInt

get_state :: GuestfsH -> IO Int
get_state h = do
  r <- withForeignPtr h (\p -> c_get_state p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_get_tmpdir" c_get_tmpdir
  :: GuestfsP -> IO CString

get_tmpdir :: GuestfsH -> IO String
get_tmpdir h = do
  r <- withForeignPtr h (\p -> c_get_tmpdir p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_get_trace" c_get_trace
  :: GuestfsP -> IO CInt

get_trace :: GuestfsH -> IO Bool
get_trace h = do
  r <- withForeignPtr h (\p -> c_get_trace p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_get_umask" c_get_umask
  :: GuestfsP -> IO CInt

get_umask :: GuestfsH -> IO Int
get_umask h = do
  r <- withForeignPtr h (\p -> c_get_umask p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_get_verbose" c_get_verbose
  :: GuestfsP -> IO CInt

get_verbose :: GuestfsH -> IO Bool
get_verbose h = do
  r <- withForeignPtr h (\p -> c_get_verbose p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_getcon" c_getcon
  :: GuestfsP -> IO CString

getcon :: GuestfsH -> IO String
getcon h = do
  r <- withForeignPtr h (\p -> c_getcon p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_glob_expand" c_glob_expand
  :: GuestfsP -> CString -> IO (Ptr CString)

glob_expand :: GuestfsH -> String -> IO [String]
glob_expand h pattern = do
  r <- withCString pattern $ \pattern -> withForeignPtr h (\p -> c_glob_expand p pattern)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_grepi" c_grepi
  :: GuestfsP -> CString -> CString -> IO (Ptr CString)

grepi :: GuestfsH -> String -> String -> IO [String]
grepi h regex path = do
  r <- withCString regex $ \regex -> withCString path $ \path -> withForeignPtr h (\p -> c_grepi p regex path)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_grub_install" c_grub_install
  :: GuestfsP -> CString -> CString -> IO CInt

grub_install :: GuestfsH -> String -> String -> IO ()
grub_install h root device = do
  r <- withCString root $ \root -> withCString device $ \device -> withForeignPtr h (\p -> c_grub_install p root device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_head" c_head
  :: GuestfsP -> CString -> IO (Ptr CString)

head :: GuestfsH -> String -> IO [String]
head h path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_head p path)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_head_n" c_head_n
  :: GuestfsP -> CInt -> CString -> IO (Ptr CString)

head_n :: GuestfsH -> Int -> String -> IO [String]
head_n h nrlines path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_head_n p (fromIntegral nrlines) path)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_hexdump" c_hexdump
  :: GuestfsP -> CString -> IO CString

hexdump :: GuestfsH -> String -> IO String
hexdump h path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_hexdump p path)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_hivex_close" c_hivex_close
  :: GuestfsP -> IO CInt

hivex_close :: GuestfsH -> IO ()
hivex_close h = do
  r <- withForeignPtr h (\p -> c_hivex_close p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_hivex_commit" c_hivex_commit
  :: GuestfsP -> CString -> IO CInt

hivex_commit :: GuestfsH -> Maybe String -> IO ()
hivex_commit h filename = do
  r <- maybeWith withCString filename $ \filename -> withForeignPtr h (\p -> c_hivex_commit p filename)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_hivex_node_add_child" c_hivex_node_add_child
  :: GuestfsP -> Int64 -> CString -> IO Int64

hivex_node_add_child :: GuestfsH -> Integer -> String -> IO Int64
hivex_node_add_child h parent name = do
  r <- withCString name $ \name -> withForeignPtr h (\p -> c_hivex_node_add_child p (fromIntegral parent) name)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_hivex_node_delete_child" c_hivex_node_delete_child
  :: GuestfsP -> Int64 -> IO CInt

hivex_node_delete_child :: GuestfsH -> Integer -> IO ()
hivex_node_delete_child h nodeh = do
  r <- withForeignPtr h (\p -> c_hivex_node_delete_child p (fromIntegral nodeh))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_hivex_node_get_child" c_hivex_node_get_child
  :: GuestfsP -> Int64 -> CString -> IO Int64

hivex_node_get_child :: GuestfsH -> Integer -> String -> IO Int64
hivex_node_get_child h nodeh name = do
  r <- withCString name $ \name -> withForeignPtr h (\p -> c_hivex_node_get_child p (fromIntegral nodeh) name)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_hivex_node_get_value" c_hivex_node_get_value
  :: GuestfsP -> Int64 -> CString -> IO Int64

hivex_node_get_value :: GuestfsH -> Integer -> String -> IO Int64
hivex_node_get_value h nodeh key = do
  r <- withCString key $ \key -> withForeignPtr h (\p -> c_hivex_node_get_value p (fromIntegral nodeh) key)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_hivex_node_name" c_hivex_node_name
  :: GuestfsP -> Int64 -> IO CString

hivex_node_name :: GuestfsH -> Integer -> IO String
hivex_node_name h nodeh = do
  r <- withForeignPtr h (\p -> c_hivex_node_name p (fromIntegral nodeh))
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_hivex_node_parent" c_hivex_node_parent
  :: GuestfsP -> Int64 -> IO Int64

hivex_node_parent :: GuestfsH -> Integer -> IO Int64
hivex_node_parent h nodeh = do
  r <- withForeignPtr h (\p -> c_hivex_node_parent p (fromIntegral nodeh))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_hivex_node_set_value" c_hivex_node_set_value
  :: GuestfsP -> Int64 -> CString -> Int64 -> CString -> CInt -> IO CInt

hivex_node_set_value :: GuestfsH -> Integer -> String -> Integer -> String -> IO ()
hivex_node_set_value h nodeh key t val = do
  r <- withCString key $ \key -> withCStringLen val $ \(val, val_size) -> withForeignPtr h (\p -> c_hivex_node_set_value p (fromIntegral nodeh) key (fromIntegral t) val (fromIntegral val_size))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_hivex_root" c_hivex_root
  :: GuestfsP -> IO Int64

hivex_root :: GuestfsH -> IO Int64
hivex_root h = do
  r <- withForeignPtr h (\p -> c_hivex_root p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_hivex_value_key" c_hivex_value_key
  :: GuestfsP -> Int64 -> IO CString

hivex_value_key :: GuestfsH -> Integer -> IO String
hivex_value_key h valueh = do
  r <- withForeignPtr h (\p -> c_hivex_value_key p (fromIntegral valueh))
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_hivex_value_type" c_hivex_value_type
  :: GuestfsP -> Int64 -> IO Int64

hivex_value_type :: GuestfsH -> Integer -> IO Int64
hivex_value_type h valueh = do
  r <- withForeignPtr h (\p -> c_hivex_value_type p (fromIntegral valueh))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_hivex_value_utf8" c_hivex_value_utf8
  :: GuestfsP -> Int64 -> IO CString

hivex_value_utf8 :: GuestfsH -> Integer -> IO String
hivex_value_utf8 h valueh = do
  r <- withForeignPtr h (\p -> c_hivex_value_utf8 p (fromIntegral valueh))
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_initrd_list" c_initrd_list
  :: GuestfsP -> CString -> IO (Ptr CString)

initrd_list :: GuestfsH -> String -> IO [String]
initrd_list h path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_initrd_list p path)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_inotify_add_watch" c_inotify_add_watch
  :: GuestfsP -> CString -> CInt -> IO Int64

inotify_add_watch :: GuestfsH -> String -> Int -> IO Int64
inotify_add_watch h path mask = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_inotify_add_watch p path (fromIntegral mask))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_inotify_close" c_inotify_close
  :: GuestfsP -> IO CInt

inotify_close :: GuestfsH -> IO ()
inotify_close h = do
  r <- withForeignPtr h (\p -> c_inotify_close p)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_inotify_files" c_inotify_files
  :: GuestfsP -> IO (Ptr CString)

inotify_files :: GuestfsH -> IO [String]
inotify_files h = do
  r <- withForeignPtr h (\p -> c_inotify_files p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_inotify_init" c_inotify_init
  :: GuestfsP -> CInt -> IO CInt

inotify_init :: GuestfsH -> Int -> IO ()
inotify_init h maxevents = do
  r <- withForeignPtr h (\p -> c_inotify_init p (fromIntegral maxevents))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_inotify_rm_watch" c_inotify_rm_watch
  :: GuestfsP -> CInt -> IO CInt

inotify_rm_watch :: GuestfsH -> Int -> IO ()
inotify_rm_watch h wd = do
  r <- withForeignPtr h (\p -> c_inotify_rm_watch p (fromIntegral wd))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_inspect_get_arch" c_inspect_get_arch
  :: GuestfsP -> CString -> IO CString
